--- a/index.html
+++ b/index.html
@@ -180,30 +180,6 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     <p id="nfcStatusResult">Scan an NFC tag to see headphone status.</p>
   </div>
 
-  <div id="checkoutDialog" class="dialog">
-    <div id="checkoutDialogHeader" class="dialog-header">Checkout Headphones</div>
-    <button id="dialogScanCheckout" onclick="scanNFC('dialogCheckout'); vibrate()">Scan NFC Tag</button>
-    <input id="dialogHeadphoneId" placeholder="Headphone ID (e.g., HP0000001)" readonly onclick="manualEntry('dialogCheckout'); vibrate()">
-    <button onclick="addDialogHeadphoneId(); vibrate()">Add Headphone ID</button>
-    <ul id="dialogHeadphoneIdsList"></ul>
-    <input id="dialogName" placeholder="Full Name">
-    <input id="dialogEmail" placeholder="Email">
-    <input id="dialogPhone" placeholder="Phone Number">
-    <textarea id="dialogAgreement" readonly rows="20">RENTAL AGREEMENT AND COLLATERAL TERMS
-
-By signing below, I, [Customer Name], agree to rent the following wireless headphones ([Headphone IDs]) from SE2 Silent Disco DBA and SE2 Events Inc. ("the Company") for use during the event on [Date]. I acknowledge that the headphones remain the property of the Company and must be returned in good working condition at the end of the event or upon request.
-I understand and agree that failure to return any headphone by the end of the event will result in a replacement fee of $100.00 USD per headphone ("Replacement Fee"). I authorize the Company to charge my credit card, provided below, the Replacement Fee for each headphone not returned or returned damaged beyond normal wear and tear.
-LIABILITY RELEASE: I hereby release, waive, discharge, and agree not to sue SE2 Silent Disco DBA and SE2 Events Inc., its officers, employees, agents, or affiliates ("Released Parties") from any and all liability, claims, demands, actions, or causes of action arising out of or related to any loss, damage, or injury, including death, that may be sustained by me or my property while using the headphones or attending the event, whether caused by the negligence of the Released Parties or otherwise. I assume full responsibility for any risk of bodily injury, death, or property damage arising from my use of the headphones and participation in the event.
-MARKETING CONSENT: I grant SE2 Silent Disco DBA and SE2 Events Inc. permission to use my email address and phone number provided herein for marketing purposes, including but not limited to sending promotional offers, event updates, and newsletters. I understand I may opt out of these communications at any time by following the unsubscribe instructions provided in such messages.
-PHOTO/VIDEO CONSENT: I consent to being photographed or recorded in video or audio by SE2 Silent Disco DBA and SE2 Events Inc. during the event. I grant the Company full permission to use, reproduce, publish, and distribute such photographs, videos, or recordings, including my likeness, voice, or image, for marketing, advertising, or promotional purposes in any medium, without compensation or further notice to me.
-This agreement constitutes a legally binding contract. I acknowledge that I have read and understood these terms, and I sign this agreement voluntarily under no duress. Any disputes arising from this agreement shall be governed by the laws of New York, USA.</textarea>
-    <div id="dialogCardContainer"></div>
-    <canvas id="dialogSignaturePad" width="250" height="120"></canvas>
-    <button onclick="clearDialogSignature(); vibrate()">Clear Signature</button>
-    <button id="dialogCheckoutButton" onclick="submitCheckoutDialog(); vibrate()">Complete Checkout</button>
-    <button onclick="closeDialog('checkout'); vibrate()">Cancel</button>
-  </div>
-
   <div id="returnDialog" class="dialog">
     <div id="returnDialogHeader" class="dialog-header">Return Headphones</div>
     <button id="dialogScanReturn" onclick="scanNFC('dialogReturn'); vibrate()">Scan NFC Tag</button>
@@ -244,7 +220,6 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     let dialogSignatureData = null;
     let payments;
     let cardElement;
-    let dialogCardElement;
     let db;
     let headphonesCollection;
     let squareLocationId;
@@ -381,7 +356,6 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
         await waitForFirebase();
         await initializeSquare();
         await loadHeadphones();
-        makeDraggable('checkoutDialog', 'checkoutDialogHeader');
         makeDraggable('returnDialog', 'returnDialogHeader');
         makeDraggable('manualReturnDialog', 'manualReturnDialogHeader');
       } catch (error) {
@@ -421,23 +395,6 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       li.innerHTML = `${id} <button class="remove-btn" onclick="removeHeadphoneId(this, '${id}')">Remove</button>`;
       list.appendChild(li);
       document.getElementById('headphoneId').value = '';
-    }
-
-    function addDialogHeadphoneId() {
-      const id = document.getElementById('dialogHeadphoneId').value.trim();
-      if (!id) {
-        alert('Please scan or enter a headphone ID first!');
-        return;
-      }
-      if (headphones[id] && headphones[id].status === 'checked_out') {
-        alert(`Headphone ${id} is already checked out!`);
-        return;
-      }
-      const list = document.getElementById('dialogHeadphoneIdsList');
-      const li = document.createElement('li');
-      li.innerHTML = `${id} <button class="remove-btn" onclick="removeHeadphoneId(this, '${id}')">Remove</button>`;
-      list.appendChild(li);
-      document.getElementById('dialogHeadphoneId').value = '';
     }
 
     function addReturnHeadphoneId() {
@@ -600,15 +557,14 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       ['checkout', 'return', 'dashboard', 'nfcStatus', 'reports'].forEach(id => {
         document.getElementById(id).style.display = id === active ? 'flex' : 'none';
       });
-      document.getElementById('checkoutDialog').style.display = 'none';
       document.getElementById('returnDialog').style.display = 'none';
       document.getElementById('manualReturnDialog').style.display = 'none';
       document.getElementById('dialogOverlay').style.display = 'none';
     }
 
     async function scanNFC(context) {
-      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : context === 'return' ? 'scanReturn' : context === 'dialogCheckout' ? 'dialogScanCheckout' : 'dialogScanReturn');
-      const input = document.getElementById(context === 'checkout' ? 'headphoneId' : context === 'return' ? 'returnId' : context === 'dialogCheckout' ? 'dialogHeadphoneId' : 'dialogReturnId');
+      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : context === 'return' ? 'scanReturn' : 'dialogScanReturn');
+      const input = document.getElementById(context === 'checkout' ? 'headphoneId' : context === 'return' ? 'returnId' : 'dialogReturnId');
       const headphoneIdRegex = /^HP\d{7}$/;
       button.disabled = true;
 
@@ -690,12 +646,12 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     }
 
     function manualEntry(context) {
-      const input = document.getElementById(context === 'checkout' ? 'headphoneId' : context === 'return' ? 'returnId' : context === 'dialogCheckout' ? 'dialogHeadphoneId' : 'dialogReturnId');
-      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : context === 'return' ? 'scanReturn' : context === 'dialogCheckout' ? 'dialogScanCheckout' : 'dialogScanReturn');
+      const input = document.getElementById(context === 'checkout' ? 'headphoneId' : context === 'return' ? 'returnId' : 'dialogReturnId');
+      const button = document.getElementById(context === 'checkout' ? 'scanCheckout' : context === 'return' ? 'scanReturn' : 'dialogScanReturn');
       const regex = /^HP\d{7}$/;
 
       const existingIds = Object.keys(headphones).filter(id => regex.test(id));
-      const listId = context === 'checkout' ? 'headphoneIdsList' : context === 'dialogCheckout' ? 'dialogHeadphoneIdsList' : null;
+      const listId = context === 'checkout' ? 'headphoneIdsList' : null;
       const checkoutIds = listId ? getHeadphoneIds(listId) : [];
       const allIds = [...new Set([...existingIds, ...checkoutIds])];
       
@@ -715,11 +671,11 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
         }
         if (!regex.test(id)) {
           alert('Invalid ID format. Use HP followed by 7 digits (e.g., HP0000001).');
-        } else if ((context === 'checkout' || context === 'dialogCheckout') && checkoutIds.includes(id)) {
+        } else if (context === 'checkout' && checkoutIds.includes(id)) {
           alert(`Headphone ${id} is already in the checkout list.`);
           id = null;
         }
-      } while (!regex.test(id) || (context === 'checkout' || context === 'dialogCheckout') && checkoutIds.includes(id));
+      } while (!regex.test(id) || (context === 'checkout' && checkoutIds.includes(id)));
 
       input.value = id;
       input.dataset.entryMethod = 'Manual';
@@ -836,11 +792,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       function stopDrawing() {
         if (drawing) {
           drawing = false;
-          if (canvasId === 'signaturePad') {
-            signatureData = canvas.toDataURL();
-          } else {
-            dialogSignatureData = canvas.toDataURL();
-          }
+          signatureData = canvas.toDataURL();
         }
       }
 
@@ -997,32 +949,8 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       }
     }
 
-    async function showCheckoutDialog(id) {
-      document.getElementById('dialogHeadphoneId').value = id;
-      document.getElementById('dialogName').value = '';
-      document.getElementById('dialogEmail').value = '';
-      document.getElementById('dialogPhone').value = '';
-      clearDialogSignature();
-      document.getElementById('checkoutDialog').style.display = 'flex';
-      document.getElementById('dialogOverlay').style.display = 'block';
-      initSignaturePad('dialogSignaturePad');
-      await initDialogCard();
-      document.getElementById('dialogHeadphoneIdsList').innerHTML = '';
-      if (id) addDialogHeadphoneId();
-    }
-
-    async function initDialogCard() {
-      if (!window.Square) {
-        console.error('Square SDK not loaded');
-        return;
-      }
-      if (!payments) {
-        payments = window.Square.payments(squareAppId);
-      }
-      const dialogCardContainer = document.getElementById('dialogCardContainer');
-      dialogCardContainer.innerHTML = '';
-      dialogCardElement = await payments.card();
-      await dialogCardElement.attach('#dialogCardContainer');
+    function showCheckoutDialog(id) {
+      window.location.href = `checkout.html?id=${encodeURIComponent(id)}`;
     }
 
     function showReturnDialog(id) {
@@ -1034,95 +962,13 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     }
 
     function closeDialog(type) {
-      if (type === 'checkout') {
-        document.getElementById('checkoutDialog').style.display = 'none';
-      } else if (type === 'return') {
+      if (type === 'return') {
         document.getElementById('returnDialog').style.display = 'none';
       } else if (type === 'manualReturn') {
         document.getElementById('manualReturnDialog').style.display = 'none';
       }
       document.getElementById('dialogOverlay').style.display = 'none';
       if (type !== 'manualReturn') showDashboard();
-    }
-
-    async function submitCheckoutDialog() {
-      const headphoneIds = getHeadphoneIds('dialogHeadphoneIdsList');
-      const name = document.getElementById('dialogName').value;
-      const email = document.getElementById('dialogEmail').value;
-      const phone = document.getElementById('dialogPhone').value;
-      const date = new Date().toISOString().split('T')[0];
-
-      if (!headphoneIds.length || !name || !email || !phone || !dialogSignatureData || !dialogCardElement) {
-        alert('Please add at least one headphone ID, fill all fields, enter card details, and sign the agreement!');
-        return;
-      }
-
-      const groupId = headphoneIds.length > 1 ? generateGroupId() : null;
-      const headphoneIdsText = headphoneIds.join(', ');
-      const agreementText = document.getElementById('dialogAgreement').value
-        .replace('[Customer Name]', name)
-        .replace('[Date]', date)
-        .replace('[Headphone IDs]', headphoneIdsText);
-
-      try {
-        const result = await dialogCardElement.tokenize();
-        if (result.status !== 'OK') throw new Error('Card tokenization failed.');
-        const paymentToken = result.token;
-
-        const preauthResponse = await fetch('/.netlify/functions/preauthorize', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            sourceId: paymentToken,
-            amount: headphoneIds.length * 10000,
-            currency: 'USD',
-            locationId: squareLocationId
-          })
-        });
-
-        const preauthResult = await preauthResponse.json();
-        if (!preauthResponse.ok) throw new Error(preauthResult.error || 'Preauthorization failed');
-        const preauthId = preauthResult.paymentId;
-
-        for (const id of headphoneIds) {
-          if (headphones[id] && headphones[id].status === 'checked_out') {
-            alert(`Headphone ${id} is already checked out! Skipping.`);
-            continue;
-          }
-          const entryMethod = document.getElementById('dialogHeadphoneId').dataset.entryMethod || 'Manual';
-          const headphoneData = {
-            status: 'checked_out',
-            customer: { name, email, phone },
-            agreement: { text: agreementText, signature: dialogSignatureData, amount: 100, date: date, timestamp: Date.now() },
-            pre_auth: { pre_auth_id: preauthId, amount: headphoneIds.length * 100 },
-            entryMethod: entryMethod
-          };
-          if (groupId) headphoneData.groupId = groupId;
-          await saveHeadphone(id, headphoneData);
-        }
-
-        const emailResponse = await fetch('/.netlify/functions/send-email', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            name: name,
-            email: email,
-            agreement: agreementText,
-            signature: dialogSignatureData,
-            preauthId: preauthId
-          })
-        });
-
-        if (emailResponse.ok) {
-          alert(`Headphones ${headphoneIdsText} checked out! Agreement emailed to ${email}.`);
-          closeDialog('checkout');
-        } else {
-          throw new Error('Email failed');
-        }
-      } catch (error) {
-        console.error('Checkout error:', error.message);
-        alert('Checkout failed: ' + error.message);
-      }
     }
 
     async function submitReturnDialog() {
